--- a/prom-service.yml
+++ b/prom-service.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: prometheus
   annotations: 
-    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-west-2:880172922216:certificate/d9ed7c7a-c6dc-402a-becf-1b608b28561b
+    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: cert-arn
     service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
     service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
 spec:
